@@ -10,6 +10,7 @@ package org.opensearch.gateway;
 
 import org.apache.logging.log4j.Logger;
 import org.opensearch.cluster.node.DiscoveryNode;
+import org.opensearch.cluster.routing.RoutingNodes;
 import org.opensearch.cluster.routing.ShardRouting;
 import org.opensearch.cluster.routing.UnassignedInfo;
 import org.opensearch.cluster.routing.allocation.AllocateUnassignedDecision;
@@ -27,8 +28,11 @@ import org.opensearch.indices.store.TransportNodesListShardStoreMetadataHelper.S
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.function.Supplier;
 
 /**
  * Allocates replica shards in a batch mode
@@ -42,7 +46,7 @@ public abstract class ReplicaShardBatchAllocator extends ReplicaShardAllocator {
      * match. Today, a better match is one that can perform a no-op recovery while the previous recovery
      * has to copy segment files.
      *
-     * @param allocation the overall routing allocation
+     * @param allocation   the overall routing allocation
      * @param shardBatches a list of shard batches to check for existing recoveries
      */
     public void processExistingRecoveries(RoutingAllocation allocation, List<List<ShardRouting>> shardBatches) {
@@ -56,7 +60,7 @@ public abstract class ReplicaShardBatchAllocator extends ReplicaShardAllocator {
                 if (shard != null && !shard.primary()) {
                     // need to iterate over all the nodes to find matching shard
                     if (shouldSkipFetchForRecovery(shard)) {
-                        ineligibleShards.add(shard);
+                        // shard should just be skipped for fetchData, no need to remove from batch
                         continue;
                     }
                     eligibleShards.add(shard);
@@ -98,71 +102,98 @@ public abstract class ReplicaShardBatchAllocator extends ReplicaShardAllocator {
 
     @Override
     public AllocateUnassignedDecision makeAllocationDecision(ShardRouting unassignedShard, RoutingAllocation allocation, Logger logger) {
-        return makeAllocationDecision(Collections.singletonList(unassignedShard), allocation, logger).get(unassignedShard);
+        Supplier<Map<DiscoveryNode, StoreFilesMetadata>> fetchDataResultSupplier = () -> {
+            return convertToNodeStoreFilesMetadataMap(
+                unassignedShard,
+                fetchData(List.of(unassignedShard), Collections.emptyList(), allocation)
+            );
+        };
+        return getUnassignedShardAllocationDecision(unassignedShard, allocation, fetchDataResultSupplier);
     }
 
-    @Override
-    public HashMap<ShardRouting, AllocateUnassignedDecision> makeAllocationDecision(
-        List<ShardRouting> shards,
-        RoutingAllocation allocation,
-        Logger logger
-    ) {
-        HashMap<ShardRouting, AllocateUnassignedDecision> shardAllocationDecisions = new HashMap<>();
-        final boolean explain = allocation.debugDecision();
+    /**
+     * Allocate Batch of unassigned shard  to nodes where valid copies of the shard already exists
+     *
+     * @param shardRoutings the shards to allocate
+     * @param allocation    the allocation state container object
+     */
+    public void allocateUnassignedBatch(List<ShardRouting> shardRoutings, RoutingAllocation allocation) {
+        logger.trace("Starting shard allocation execution for unassigned replica shards: {}", shardRoutings.size());
         List<ShardRouting> eligibleShards = new ArrayList<>();
         List<ShardRouting> ineligibleShards = new ArrayList<>();
-        HashMap<ShardRouting, Tuple<Decision, Map<String, NodeAllocationResult>>> nodeAllocationDecisions = new HashMap<>();
-        for (ShardRouting shard : shards) {
-            if (!isResponsibleFor(shard)) {
-                // this allocator n is not responsible for allocating this shard
+        Map<ShardRouting, AllocateUnassignedDecision> ineligibleShardAllocationDecisions = new HashMap<>();
+
+        for (ShardRouting shard : shardRoutings) {
+            AllocateUnassignedDecision shardDecisionWithoutFetch = getUnassignedShardAllocationDecision(shard, allocation, null);
+            // Without fetchData, decision for in-eligible shards is non-null from our preliminary checks and null for eligible shards.
+            if (shardDecisionWithoutFetch != null) {
                 ineligibleShards.add(shard);
-                shardAllocationDecisions.put(shard, AllocateUnassignedDecision.NOT_TAKEN);
-                continue;
+                ineligibleShardAllocationDecisions.put(shard, shardDecisionWithoutFetch);
+            } else {
+                eligibleShards.add(shard);
             }
-
-            Tuple<Decision, Map<String, NodeAllocationResult>> result = canBeAllocatedToAtLeastOneNode(shard, allocation);
-            Decision allocationDecision = result.v1();
-            if (allocationDecision.type() != Decision.Type.YES && (!explain || !hasInitiatedFetching(shard))) {
-                // only return early if we are not in explain mode, or we are in explain mode but we have not
-                // yet attempted to fetch any shard data
-                logger.trace("{}: ignoring allocation, can't be allocated on any node", shard);
-                shardAllocationDecisions.put(
-                    shard,
-                    AllocateUnassignedDecision.no(
-                        UnassignedInfo.AllocationStatus.fromDecision(allocationDecision.type()),
-                        result.v2() != null ? new ArrayList<>(result.v2().values()) : null
-                    )
-                );
-                continue;
-            }
-            // storing the nodeDecisions in nodeAllocationDecisions if the decision is not YES
-            // so that we don't have to compute the decisions again
-            nodeAllocationDecisions.put(shard, result);
-
-            eligibleShards.add(shard);
         }
 
-        // Do not call fetchData if there are no eligible shards
-        if (eligibleShards.isEmpty()) {
-            return shardAllocationDecisions;
-        }
         // only fetch data for eligible shards
         final FetchResult<NodeStoreFilesMetadataBatch> shardsState = fetchData(eligibleShards, ineligibleShards, allocation);
 
-        for (ShardRouting unassignedShard : eligibleShards) {
-            Tuple<Decision, Map<String, NodeAllocationResult>> result = nodeAllocationDecisions.get(unassignedShard);
-            shardAllocationDecisions.put(
-                unassignedShard,
-                getAllocationDecision(
-                    unassignedShard,
-                    allocation,
-                    convertToNodeStoreFilesMetadataMap(unassignedShard, shardsState),
-                    result,
-                    logger
-                )
+        Set<ShardId> shardIdsFromBatch = new HashSet<>();
+        for (ShardRouting shardRouting : shardRoutings) {
+            ShardId shardId = shardRouting.shardId();
+            shardIdsFromBatch.add(shardId);
+        }
+        RoutingNodes.UnassignedShards.UnassignedIterator iterator = allocation.routingNodes().unassigned().iterator();
+        while (iterator.hasNext()) {
+            ShardRouting unassignedShard = iterator.next();
+            // There will be only one entry for the shard in the unassigned shards batch
+            // for a shard with multiple unassigned replicas, hence we are comparing the shard ids
+            // instead of ShardRouting in-order to evaluate shard assignment for all unassigned replicas of a shard.
+            if (!unassignedShard.primary() && shardIdsFromBatch.contains(unassignedShard.shardId())) {
+                AllocateUnassignedDecision allocateUnassignedDecision;
+                if (ineligibleShardAllocationDecisions.containsKey(unassignedShard)) {
+                    allocateUnassignedDecision = ineligibleShardAllocationDecisions.get(unassignedShard);
+                } else {
+                    // The shard's eligibility is being recomputed again as
+                    // the routing allocation state is updated during shard allocation decision execution
+                    // because of which allocation eligibility of other unassigned shards can change.
+                    allocateUnassignedDecision = getUnassignedShardAllocationDecision(
+                        unassignedShard,
+                        allocation,
+                        () -> convertToNodeStoreFilesMetadataMap(unassignedShard, shardsState)
+                    );
+                }
+                executeDecision(unassignedShard, allocateUnassignedDecision, allocation, iterator);
+            }
+        }
+        logger.trace("Finished shard allocation execution for unassigned replica shards: {}", shardRoutings.size());
+    }
+
+    private AllocateUnassignedDecision getUnassignedShardAllocationDecision(
+        ShardRouting shardRouting,
+        RoutingAllocation allocation,
+        Supplier<Map<DiscoveryNode, StoreFilesMetadata>> nodeStoreFileMetaDataMapSupplier
+    ) {
+        if (!isResponsibleFor(shardRouting)) {
+            return AllocateUnassignedDecision.NOT_TAKEN;
+        }
+        Tuple<Decision, Map<String, NodeAllocationResult>> result = canBeAllocatedToAtLeastOneNode(shardRouting, allocation);
+
+        final boolean explain = allocation.debugDecision();
+        Decision allocationDecision = result.v1();
+        if (allocationDecision.type() != Decision.Type.YES && (!explain || !hasInitiatedFetching(shardRouting))) {
+            // only return early if we are not in explain mode, or we are in explain mode but we have not
+            // yet attempted to fetch any shard data
+            logger.trace("{}: ignoring allocation, can't be allocated on any node", shardRouting);
+            return AllocateUnassignedDecision.no(
+                UnassignedInfo.AllocationStatus.fromDecision(allocationDecision.type()),
+                result.v2() != null ? new ArrayList<>(result.v2().values()) : null
             );
         }
-        return shardAllocationDecisions;
+        if (nodeStoreFileMetaDataMapSupplier != null) {
+            Map<DiscoveryNode, StoreFilesMetadata> discoveryNodeStoreFilesMetadataMap = nodeStoreFileMetaDataMapSupplier.get();
+            return getAllocationDecision(shardRouting, allocation, discoveryNodeStoreFilesMetadataMap, result, logger);
+        }
+        return null;
     }
 
     private Map<DiscoveryNode, StoreFilesMetadata> convertToNodeStoreFilesMetadataMap(
